changed to index

--- a/about_me.html
+++ b/about_me.html
@@ -21,7 +21,7 @@ I also don't know how to do notes in the CSS file. I don't really understand how
   <div>
   	<h3>Allow me to introduce myself...</h3>
     <p>I'm Joe Johnson, a Developer based in NYC. I Have ten years of experience in the graphic design world, specializing in the creation of responsive websites.</p>
-    <h3>You can read more about my work in my <a href="./portfolio.html">portfolio.</a></h3>
+    <h3>You can read more about my work in my <a href="./index.html">portfolio.</a></h3>
   </div>
  </body>
 </html>
